<resources>
    <string name="REQUEST_PERMISSION_DENIED_DESCRIPTION">该功能需要：【%1$s】权限，请点击【确定】在【应用信息】>【权限】标签里开启</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CALENDAR">日历</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CAMERA">相机</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CONTACT">通讯录</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE">存储</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE_SPACE">存储空间</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION">定位</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION_INFO">位置信息</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_READ_PHONE_STATE">拨打电话</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_RECORD_AUDIO">麦克风</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_SMS">短信</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annie_x_button_label_copy_link">复制链接</string>
    <string name="annie_x_button_label_open_browser">浏览器打开</string>
    <string name="annie_x_button_label_refresh">刷新</string>
    <string name="annie_x_button_label_report">举报</string>
    <string name="annie_x_close">关闭</string>
    <string name="annie_x_dialog_bottom_sheet_behavior">com.bytedance.android.anniex.container.popup.BottomSheetBehavior</string>
    <string name="annie_x_dialog_right_sheet_behavior">com.bytedance.android.anniex.container.popup.RightSheetBehavior</string>
    <string name="annie_x_source_label_text">此网页由%1$s提供</string>
    <string name="app_name">TRAE3</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autofill">Autofill</string>
    <string name="aweme_loading">加载中...</string>
    <string name="aweme_open_auth_title">抖音登录授权</string>
    <string name="aweme_open_dialog_cancel">取消</string>
    <string name="aweme_open_dialog_confirm">打开</string>
    <string name="aweme_open_error_tips_cancel">取消</string>
    <string name="aweme_open_network_error_confirm">确定</string>
    <string name="aweme_open_network_error_tips">当前网络不可用，请稍后重试</string>
    <string name="aweme_open_network_error_title">授权失败</string>
    <string name="aweme_open_request_click_to_retry">点击重试</string>
    <string name="aweme_open_request_error">请求失败</string>
    <string name="aweme_open_ssl_cancel">取消</string>
    <string name="aweme_open_ssl_continue">是否继续？</string>
    <string name="aweme_open_ssl_error">证书错误</string>
    <string name="aweme_open_ssl_expired">证书过期</string>
    <string name="aweme_open_ssl_mismatched">证书不匹配</string>
    <string name="aweme_open_ssl_notyetvalid">证书尚未生效</string>
    <string name="aweme_open_ssl_ok">确认</string>
    <string name="aweme_open_ssl_untrusted">证书不可信</string>
    <string name="aweme_open_ssl_warning">警告</string>
    <string name="aweme_open_web_auth_cancel">返回</string>
    <string name="bd_platform_error_tips_common">unknow error</string>
    <string name="bdturing_identity_verify_dlg_cancel_text">取消</string>
    <string name="bdturing_identity_verify_dlg_confirm_text">去验证</string>
    <string name="bdturing_identity_verify_dlg_content">系统识别你的操作环境存在风险，为保证账号安全，请完成身份验证</string>
    <string name="bdturing_identity_verify_dlg_title">身份安全验证</string>
    <string name="bg_auto_download_string">允许内网wifi自动下载升级包</string>
    <string name="block_list">block list</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="business_exclusive_discount">Exclusive subsidies</string>
    <string name="business_member_discount">Members %2$s%% off</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">取消</string>
    <string name="catch_exception">catch exception</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_dialog_btn">升级</string>
    <string name="check_dialog_confirm">确定</string>
    <string name="check_dialog_content_dot">・</string>
    <string name="check_dialog_error_message">网络错误</string>
    <string name="check_dialog_error_title">提示</string>
    <string name="check_dialog_none_message">已经是最新版本</string>
    <string name="check_dialog_none_title">提示</string>
    <string name="check_dialog_title">升级版本</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="cmp_device_management_guide_ide_step2">2. Download TRAE IDE and sign in with the same account</string>
    <string name="cmp_device_management_guide_ide_step3">3. Open settings > Phone pairing</string>
    <string name="cmp_device_management_guide_step1">1. On your laptop open %1$s</string>
    <string name="cmp_device_management_guide_work_step2">2. Download TRAE Work and sign in with the same account</string>
    <string name="cmp_device_management_guide_work_step3">3. Enable TRAE Mobile in Settings</string>
    <string name="cmp_device_management_ide_title">TRAE IDE</string>
    <string name="cmp_device_management_offline">Offline</string>
    <string name="cmp_device_management_online">Online</string>
    <string name="cmp_device_management_work_title">SOLO Mobile</string>
    <string name="cmp_trae_setting_bonus">+bonus</string>
    <string name="cmp_trae_setting_points">Points</string>
    <string name="cmp_trae_setting_subscribe">Subscribe</string>
    <string name="cmp_trae_setting_theme">Theme</string>
    <string name="cmp_trae_setting_theme_dark">Dark</string>
    <string name="cmp_trae_setting_theme_light">Light</string>
    <string name="cmp_trae_setting_theme_system">System</string>
    <string name="cmp_trae_setting_upgrade">Upgrade</string>
    <string name="cmp_trae_setting_usage">Usage</string>
    <string name="cmp_trae_setting_usage_price">$3</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_api_error">token/beat error</string>
    <string name="confirm">确定</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="description_close_button">关闭</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="email_edit_text_hint">输入邮箱前缀</string>
    <string name="email_suffix">\@bytedance.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="event_create">event create</string>
    <string name="event_repeated">event repeated</string>
    <string name="event_terminated">event terminated</string>
    <string name="event_upload">event upload</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="trae_conversation_menu_artifact">Artifacts</string>
    <string name="trae_conversation_menu_delete">Delete</string>
    <string name="trae_conversation_menu_pin">Pin</string>
    <string name="trae_conversation_menu_rename">Rename</string>
    <string name="trae_conversation_menu_extract">提取对话</string>
</resources>