<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_conversation_detail_menu_popup" android:paddingTop="@dimen/trae_context_menu_detail_vertical_padding" android:paddingBottom="@dimen/trae_context_menu_detail_vertical_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/trae_context_menu_detail_width" android:elevation="@dimen/trae_context_menu_elevation"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/menu_extract" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_item_height" android:paddingStart="@dimen/trae_context_menu_item_horizontal_padding" android:paddingEnd="@dimen/trae_context_menu_item_horizontal_padding">
        <ImageView android:id="@id/iv_menu_extract" android:layout_width="@dimen/trae_context_menu_icon_size" android:layout_height="@dimen/trae_context_menu_icon_size" android:src="@drawable/file_document" android:importantForAccessibility="no" />
        <TextView android:textColor="@color/trae_text_text_default" android:id="@id/tv_menu_extract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trae_conversation_menu_extract" android:layout_marginStart="@dimen/trae_context_menu_detail_icon_text_gap" style="@style/Trae.Text.Body.Base.ContextMenu" />
    </LinearLayout>
    <View android:id="@id/menu_divider_extract" android:background="@color/trae_border_border_neutral_l2" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_divider_height" android:layout_marginStart="@dimen/trae_context_menu_item_horizontal_padding" android:layout_marginEnd="@dimen/trae_context_menu_item_horizontal_padding" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/menu_artifact" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_item_height" android:paddingStart="@dimen/trae_context_menu_item_horizontal_padding" android:paddingEnd="@dimen/trae_context_menu_item_horizontal_padding">
        <ImageView android:layout_width="@dimen/trae_context_menu_icon_size" android:layout_height="@dimen/trae_context_menu_icon_size" android:src="@drawable/ic_conversation_menu_artifact" android:importantForAccessibility="no" />
        <TextView android:textColor="@color/trae_text_text_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trae_conversation_menu_artifact" android:layout_marginStart="@dimen/trae_context_menu_detail_icon_text_gap" style="@style/Trae.Text.Body.Base.ContextMenu" />
    </LinearLayout>
    <View android:id="@id/menu_divider_artifact" android:background="@color/trae_border_border_neutral_l2" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_divider_height" android:layout_marginStart="@dimen/trae_context_menu_item_horizontal_padding" android:layout_marginEnd="@dimen/trae_context_menu_item_horizontal_padding" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/menu_pin" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_item_height" android:paddingStart="@dimen/trae_context_menu_item_horizontal_padding" android:paddingEnd="@dimen/trae_context_menu_item_horizontal_padding">
        <ImageView android:id="@id/iv_menu_pin" android:layout_width="@dimen/trae_context_menu_icon_size" android:layout_height="@dimen/trae_context_menu_icon_size" android:src="@drawable/trae_ic_context_menu_pin" android:importantForAccessibility="no" />
        <TextView android:textColor="@color/trae_text_text_default" android:id="@id/tv_menu_pin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trae_conversation_menu_pin" android:layout_marginStart="@dimen/trae_context_menu_detail_icon_text_gap" style="@style/Trae.Text.Body.Base.ContextMenu" />
    </LinearLayout>
    <View android:id="@id/menu_divider_pin" android:background="@color/trae_border_border_neutral_l2" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_divider_height" android:layout_marginStart="@dimen/trae_context_menu_item_horizontal_padding" android:layout_marginEnd="@dimen/trae_context_menu_item_horizontal_padding" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/menu_rename" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_item_height" android:paddingStart="@dimen/trae_context_menu_item_horizontal_padding" android:paddingEnd="@dimen/trae_context_menu_item_horizontal_padding">
        <ImageView android:layout_width="@dimen/trae_context_menu_icon_size" android:layout_height="@dimen/trae_context_menu_icon_size" android:src="@drawable/ic_conversation_rename" android:importantForAccessibility="no" />
        <TextView android:textColor="@color/trae_text_text_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trae_conversation_menu_rename" android:layout_marginStart="@dimen/trae_context_menu_detail_icon_text_gap" style="@style/Trae.Text.Body.Base.ContextMenu" />
    </LinearLayout>
    <View android:background="@color/trae_border_border_neutral_l2" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_divider_height" android:layout_marginStart="@dimen/trae_context_menu_item_horizontal_padding" android:layout_marginEnd="@dimen/trae_context_menu_item_horizontal_padding" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/menu_delete" android:layout_width="fill_parent" android:layout_height="@dimen/trae_context_menu_item_height" android:paddingStart="@dimen/trae_context_menu_item_horizontal_padding" android:paddingEnd="@dimen/trae_context_menu_item_horizontal_padding">
        <ImageView android:layout_width="@dimen/trae_context_menu_icon_size" android:layout_height="@dimen/trae_context_menu_icon_size" android:src="@drawable/ic_conversation_delete" android:importantForAccessibility="no" />
        <TextView android:textColor="@color/trae_status_error_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trae_conversation_menu_delete" android:layout_marginStart="@dimen/trae_context_menu_detail_icon_text_gap" style="@style/Trae.Text.Body.Base.ContextMenu" />
    </LinearLayout>
</LinearLayout>
